Landing fix for plugin hang bug 429903. Fix hang on pages that script plugins. Patch by bent.mozilla@gmail.com, r+sr=brendan@mozilla.org/jst@mozilla.org, a=beltzner